--- a/hints.Rmd
+++ b/hints.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 
 ```{r, echo=FALSE, fig.align='center'}
-knitr::include_graphics("https://media.istockphoto.com/photos/barrier-under-construction-picture-id1139968862?k=20&m=1139968862&s=612x612&w=0&h=QXAvHsIYHG5MLxMIgIkICw8-n31R3sQvup2d6LGd3eQ=")
+#knitr::include_graphics("https://media.istockphoto.com/photos/barrier-under-construction-picture-id1139968862?k=20&m=1139968862&s=612x612&w=0&h=QXAvHsIYHG5MLxMIgIkICw8-n31R3sQvup2d6LGd3eQ=")
 ```
 
 
@@ -21,6 +21,106 @@ htmltools::tagList(
   rmarkdown::html_dependency_font_awesome()
 )
 ```
+
+# JupyterHub template
+
+[Pull the data here!](https://jupyter.utoronto.ca/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fsta303-bolton%2Fsta303-w22-final-project-template&urlpath=rstudio%2F)
+
+# Guide to the folders and files
+
+This files is a Markdown based README file. It will be rendered on GitHub as a landing page of sorts to help someone understand this project. It is good practice to have a README file to help orient a viewer to your project.
+
+## Folders
+- The `data-raw` folder should have the raw data provided by the client, as well where the licensed data for the postcode conversion, the census data and your web scraping results should be saved. This file should NOT be made publicly available. 
+
+- The `data` folder should contain any datasets created in the `data-cleaning.Rmd` and used in `sta303-final-project.Rmd`.
+
+- The `cache` folder will appear after you set up the Canadian census data. It doesn't not need to be submitted as part of you assessment.
+
+## Files 
+
+- `README.MD` this file that you're reading! It tells you about the contents and set up of this project.
+
+- `data-prep.Rmd` is where you should write the code for creating the datasets you will use in your main report. It should read in data from `raw-data` and the data sets you plan to use for the report into `data`. All other modelling, summaries, etc., should be done in the main Rmd. 
+  - The purpose of this is to make sure that your main report is __reproducible__ with the data you would be allowed to share publicly, should you choose to do so. I.e., you could upload your `data` folder and your `sta303-final-project.Rmd` to a public GitHub repo. 
+
+- `sta303-final-project.Rmd` is the file that should be updated to create your final report. It should only use data from the `data` folder.
+
+- `report.tex` is the LaTeX template that helps create the final report. You should not need to edit it.
+
+## A note on files paths
+
+All files paths should be __relative__ to `sta303-final-project.Rmd` and of the form `data/filename` or `raw-data/filename`.
+
+# Guide to the data
+
++------------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+| Dataset          | Variables                                                         | Description                                                                                                     |
++==================+===================================================================+=================================================================================================================+
+| `cust_dev.Rds`   | `cust_id`, `dev_id`                                               | Matches each customer to their current device.                                                                  |
++------------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+| `customer.Rds`   | `cust_id`, `dob`, `postcode`, `sex`, `pronouns`, `emoji_modifier` | General information we held about each customer for use in the app and associated profile and chat features.    |
++------------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+| `device.Rds`     | `dev_id`, `device_name`, `line`, `released`                       | Additional information about each device in these data. May be useful for connecting with the industry dataset. |
++------------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+| `cust_sleep.Rds` | `cust_id`, `date`, `duration`, `flags`                            | Sleep data for each customer.                                                                                   |
++------------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+
+
+: Table 1: Guide to client provided data
+
+### Guide to the variables
+
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Variable         | Description                                                                                                                                                                                                                                                                                                      |
++==================+==================================================================================================================================================================================================================================================================================================================+
+| `cust_id`        | Unique ID for each customer.                                                                                                                                                                                                                                                                                     |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `dob`            | Date of birth, as entered by customer. Year, month, day format.                                                                                                                                                                                                                                                  |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `postcode`       | Postal code of customer.                                                                                                                                                                                                                                                                                         |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `sex`            | Biological sex, used for calculations of health metrics, like body-mass index and base metabolic rate.                                                                                                                                                                                                           |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `pronouns`       | Pronouns for social profile.                                                                                                                                                                                                                                                                                     |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `emoji_modifier` | Code for skin tone modifier for emojis when using the chat and react features of the social component of our app. These are the standard [unicode modifiers](https://unicode.org/emoji/charts/full-emoji-modifiers.html), based on the Fitzpatrick scale. If not set, this means the default yellow colour used. |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `dev_id`         | Unique ID for each device registered with our app.                                                                                                                                                                                                                                                               |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `device_name`    | Name of device type.                                                                                                                                                                                                                                                                                             |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `line`           | Line of products this device belongs to.                                                                                                                                                                                                                                                                         |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `released`       | Release date for this particular device type. Year, month, day format.                                                                                                                                                                                                                                           |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| `date`           | For sleep data, date sleep session started. Year, month, day format.                                                                                                                                                                                                                                             |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| duration         | Duration, in minutes, of sleep session.                                                                                                                                                                                                                                                                          |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| flags            | Number of times there was a quality flag during the sleep session. Flags may occur due to missing data, or due to data being recorded but sufficiently unusual to suggest it may be a sensor error or other data quality issue.                                                                                  |
++------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
+: Table 2: Client data variables
+
+## Additional hints
+
++--------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
+| Dataset                  | Variables                                                                                                                                                                                                                | Description                                                                                  |
++==========================+==========================================================================================================================================================================================================================+==============================================================================================+
+| Web scraped device data  | `Device name`, `Line`, `Recommended retail price`, `Battery life`, `Water resitance`, `Heart rate sensor`, `Pulse oximiter`, `GPS`, `Sleep tracking`, `Smart notifications`, `Contactless payments`, `Released`, `Brand` | Source: <https://fitnesstrackerinfohub.netlify.app/>.                                        |
+|                          |                                                                                                                                                                                                                          |                                                                                              |
+|                          |                                                                                                                                                                                                                          | See [*Data and hints*](https://sta303-bolton.github.io/sta303-w22-final-project/hints.html). |
++--------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
+| Median income data       | `CSDuid`, `hhld_median_inc`, `Population`                                                                                                                                                                                | Procured through the Census Mapper API.                                                      |
+|                          |                                                                                                                                                                                                                          |                                                                                              |
+|                          |                                                                                                                                                                                                                          | See [*Data and hints*](https://sta303-bolton.github.io/sta303-w22-final-project/hints.html). |
++--------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
+| Postcode conversion file | `PC`, `CSDuid`                                                                                                                                                                                                           | Sourced through U of T Libraries.                                                            |
+|                          |                                                                                                                                                                                                                          |                                                                                              |
+|                          |                                                                                                                                                                                                                          | See [*Data and hints*](https://sta303-bolton.github.io/sta303-w22-final-project/hints.html). |
++--------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------+
+
+: Table 3: Hints for data you must acquire elsewhere
 
 # Web scraping a website with one simple table
 
@@ -51,7 +151,8 @@ html <- scrape(target)
 
 device_data <- html %>% 
   html_elements("table") %>% 
-  html_table()
+  html_table() %>% 
+  pluck(1) # added, in case you're getting a list format
 
 ```
 
@@ -63,13 +164,20 @@ device_data <- html %>%
   - You are asked to accept a license agreement to get access to this data.
   - This is data that should NOT go directly on to your GitHub. Think carefully about how you will process this data, saving only the information you need for any data that is part of your final submission.
 - I recommend downloading the .sav file version. It says it is for SPSS, but it is easy to read into R.
-- Choose an appropriate year and make sure you specify/judtify it in your write-up.
+- Choose an appropriate year and make sure you specify/justify it in your write-up.
+
   
+## Uploading the data to the JupyterHub
+
+__You may need to compress the .sav file before uploading to ensure a smooth upload.__ It will automatically decompressed for you, upon upload.
+
+If you're getting crashes on the JupyterHub, talk to the teaching team about `break_glass_in_case_of_emergency`.
   
 ```{r, eval = FALSE}
 # install.packages("haven")
 library(haven)
-dataset = read_sav("prof-data/pccfNat_fccpNat_082021sav.sav")
+library(tidyverse)
+dataset = read_sav("raw-data/pccfNat_fccpNat_082021sav.sav")
 
 postcode <- dataset %>% 
   select(PC, CSDuid)
@@ -78,8 +186,9 @@ postcode <- dataset %>%
 
 # Getting income data from the Canadian census
 
-- Sign up for the cancensus API
-- Get your API key and repalce it below
+- Sign up for the cancensus API through https://censusmapper.ca/
+- Get your API key and replace it below
+  - You can access your key by clicking your profile picture and choosing 'Edit profile'. It will be displayed on that page.
 
 ```{r, eval=FALSE}
 # install.packages("cancensus")
@@ -98,8 +207,9 @@ regions_filtered <-  regions %>%
   as_census_region_list()
 
 # This can take a while
+# We want to get household median income
 census_data_csd <- get_census(dataset='CA16', regions = regions_filtered,
-                          vectors=c("v_CA16_2397"),
+                          vectors=c("v_CA16_2397"), 
                           level='CSD', geo_format = "sf")
 
 # Simplify to only needed variables
@@ -112,4 +222,8 @@ median_income <- census_data_csd %>%
 ```
 
 
+# Other
 
+- If you have convergence issues using `glmer`, consider changing the optimizer: `control=glmerControl(optimizer="bobyqa",  optCtrl=list(maxfun=2e5))`. (add this to you `glmer` cal)
+- You may want to rescale age. `scales::rescale` is pretty handy for this. (Note: there may be other more appropriate ways yo consider age, depending on the research question.)
+- You can fit equivalent models in `glmer` and `gam`, but sometimes `gam` fits them faster!
